<!--
  ~ Copyright 2020 Cagatay Ulusoy (Ulus Oy Apps). All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">HMS Codelabs</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">HMS Codelabs</string>

    <string name="hello_home_fragment">Hello, Welcome to HMS Codelabs!\n\nChoose a Codelab from the list:</string>

    <string name="topic_name_scan_kit">Scan Kit</string>
    <string name="topic_name_site_kit">Site Kit</string>
    <string name="topic_name_ml_kit">ML Kit</string>
    <string name="topic_name_wallet_kit">Wallet Kit</string>
    <string name="topic_name_safety_detect">Safety Detect</string>
    <string name="topic_name_analytics_kit">Analytics Kit</string>
    <string name="topic_name_account_kit">Account Kit</string>
    <string name="topic_name_location_kit">Location Kit</string>
    <string name="topic_name_map_kit">Map Kit</string>
    <string name="topic_name_iap">In App Purchase</string>
    <string name="topic_name_dtm">Dynamic Tag Manager</string>
    <string name="topic_name_drive_kit">Drive Kit</string>
    <string name="topic_name_hms_toolkit">HMS Toolkit</string>
    <string name="topic_name_nearby_service">Nearby Service</string>
    <string name="topic_name_agp_firebase">AppGallery and Firebase</string>
    <string name="topic_name_drm_kit">DRM Kit</string>
    <string name="topic_name_panorama_kit">Panorama Kit</string>
    <string name="topic_name_push_kit">Push Kit</string>
    <string name="topic_name_awareness_kit">Awareness Kit</string>
    <string name="topic_name_health_kit">Health Kit</string>
    <string name="topic_name_ad_kit">Ad Kit</string>
    <string name="topic_name_fido_kit">FIDO Kit</string>
    <string name="topic_name_identity_kit">Identity Kit</string>
    <string name="codelab_not_implemented">Codelab has not yet been implemented</string>


    <string name="permission_rationale">This codelab requires following permissions.</string>

    <string name="account_kit_usage_process">Huawei Account Usage Process</string>
    <string name="account_kit_id_token_mode">ID-Token Mode SignIn</string>
    <string name="account_kit_auth_mode">AuthorizationCode Mode SignIn</string>
    <string name="account_kit_sign_out">SignOut</string>
    <string name="location_kit_request">Request Location Updates</string>
    <string name="location_kit_remove">Remove Location Updates</string>
    <string name="location_kit_location_update_removed">Location update removed.</string>
    <string name="ad_kit_oaid_text">OAID</string>
    <string name="ad_kit_personalization_state">Ads Personalization State</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="front_camera">Front Camera</string>
    <string name="get_user_address">Get Huawei User Address</string>

    <string name="fingerprint_login_without_cryptoobject">fingerprint login without CryptoObject</string>
    <string name="fingerprint_login_with_cryptoobject">fingerprint login with CryptoObject</string>
    <string name="face_login_with_cryptoobject">face login with CryptoObject</string>
    <string name="operation_cancel">Operation cancelled.</string>
    <string name="identity_kit_fragment_label">Identity Kit</string>
    <string name="scan_kit_cutomized_view_mode">Scan Barcode</string>
    <string name="settings">settings</string>
    <string name="next">next</string>
    <string name="post_score">post score</string>
    <string name="true_answer">true</string>
    <string name="false_answer">false</string>

    <string name="save_setting_button">Save</string>
    <string name="q1">The largest planet in the solar system is Jupiter</string>
    <string name="q2">The first Olympic Games were held in Athens, Greece</string>
    <string name="q3">The violin has 6 strings</string>
    <string name="q4">Flying bats belong to birds</string>
    <string name="q5">Sound spreads faster in the water than in the air</string>
    <string name="wrong_answer">The answer is wrong.</string>
    <string name="correct_answer">The answer is correct.</string>
    <string name="favorite_sport">Favorite Sport</string>
    <string name="getToken">get token</string>
</resources>
