<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Cagatay Ulusoy (Ulus Oy Apps). All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fingerprint_without_cyrpto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_large"
        android:text="@string/fingerprint_login_without_cryptoobject"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fingerprint_with_cyrpto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_large"
        android:text="@string/fingerprint_login_with_cryptoobject"
        app:layout_constraintTop_toBottomOf="@+id/fingerprint_without_cyrpto"
        app:layout_constraintEnd_toEndOf="@+id/fingerprint_without_cyrpto"
        app:layout_constraintStart_toStartOf="@+id/fingerprint_without_cyrpto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/face_without_cyrpto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_large"
        android:text="@string/face_login_with_cryptoobject"
        app:layout_constraintTop_toBottomOf="@+id/fingerprint_with_cyrpto"
        app:layout_constraintEnd_toEndOf="@+id/fingerprint_without_cyrpto"
        app:layout_constraintStart_toStartOf="@+id/fingerprint_without_cyrpto" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_spacing_large"
        tools:text = "@tools:sample/lorem/random"
        app:layout_constraintTop_toBottomOf="@+id/face_without_cyrpto"
        app:layout_constraintEnd_toEndOf="@+id/fingerprint_without_cyrpto"
        app:layout_constraintStart_toStartOf="@+id/fingerprint_without_cyrpto" />

</androidx.constraintlayout.widget.ConstraintLayout>